--- a/night.css
+++ b/night.css
@@ -43,6 +43,7 @@ body {
 #quote {
   color: #E6E6E6;
   font-size: 44px;
+  letter-spacing: 16px;
   font-family: 'Raleway', sans-serif;
   text-align: center;
   padding-top: 40px;
